--- a/CSIS247Project/AndroidManifest.xml
+++ b/CSIS247Project/AndroidManifest.xml
@@ -37,6 +37,11 @@
         </activity>
         
         <activity
+            android:name=".EventSearch"
+            android:screenOrientation="portrait">>
+        </activity>
+        
+        <activity
             android:name=".Event"
             android:screenOrientation="portrait">
             <intent-filter>
