--- a/CSIS247Project/AndroidManifest.xml
+++ b/CSIS247Project/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	
+	<uses-feature android:name="android.hardware.location" android:required="true"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -48,6 +51,11 @@
                 <action android:name="com.csis247.theApp.Event" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        
+        <activity
+            android:name=".Prefs"
+            android:screenOrientation="portrait">>
         </activity>
         
         <service android:name="com.csis247.theApp.GpsService"
